# Smart-algorithms

./: ACMProblem1.c  BufferT.c  BufferT.h  CMakeLists.txt  README.md  Ringbuffer.c  Stack.c  algo1.c
ProjektabgabeBICSS1/: hash.c  hash.h  main.c
